# lsposed-universal-template

./: .gitignore  ANALYSIS.md  BUILD.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  gradle.properties  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/lspatch/assets/: xposed_init
app/src/lspatch/java/com/jordan/rogue/recovery/classic/: ClassicEntry.java
app/src/lsposed/java/com/jordan/rogue/recovery/: ModuleEntry.java
app/src/lsposed/java/com/jordan/rogue/recovery/protection/: IntegrityBypass.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  firestonehooks.cpp  native_utils.cpp  native_utils.h  settings.cpp  settings.h  template_native.cpp
app/src/main/cpp/hooks/: attack_speed.cpp  common.cpp  common.h  easy_wins.cpp  event_exchange.cpp  game_speed.cpp  god_mode.cpp  one_hit_kill.cpp
app/src/main/java/com/jordan/rogue/recovery/: FeatureRegistry.java  FeatureState.java  ModuleEntry.java  NativeBridge.java  NativeUtils.java  TemplateConfig.java
app/src/main/java/com/jordan/rogue/recovery/engine/: EngineDetector.java
app/src/main/java/com/jordan/rogue/recovery/protection/: IntegrityBypass.java
app/src/main/java/com/jordan/rogue/recovery/ui/: LauncherActivity.java  OverlayController.java
app/src/main/java/com/template/lsposed/: Bootstrap.java  FeatureRegistry.java  FeatureState.java  FirestoneSettings.java  LSPatchEntry.java  ModuleEntry.java  NativeBridge.java  NativeUtils.java  SettingsProvider.java  TemplateConfig.java
app/src/main/java/com/template/lsposed/engine/: EngineDetector.java
app/src/main/java/com/template/lsposed/ui/: LauncherActivity.java  OverlayController.java
app/src/main/res/values/: arrays.xml  strings.xml
artifacts/: .gitignore  logcat_attack_speed_paths_x10.txt  logcat_attack_speed_paths_x20.txt  logcat_attack_speed_x10.txt  logcat_free_currency_nospend.txt  logcat_launch.txt  logcat_launch_full.txt  logcat_menu_panel.txt  logcat_menu_visible.txt  logcat_module_off_fix.txt  logcat_module_off_investigation_final.txt  logcat_module_off_investigation_final_installed.txt  logcat_module_off_investigation_public_fallback.txt  logcat_module_off_repro.txt  logcat_module_reenabled_fix.txt  logcat_original_forceclose_repro.txt
docs/: ENGINE_GODOT_LUA_COCOS.md  ENGINE_IL2CPP.md  ENGINE_NATIVE_WORKFLOWS.md  FRIDA_EMULATOR_QUICKSTART.md  INTEGRITY_BYPASS_NOTES.md  LSPATCH_NONROOT.md  MODULES_OVERVIEW.md  MODULE_ONCE.md  MODULE_ROGUE.md  MOD_MENU_STYLE.md  NATIVE_MODDING_PLAYBOOK.md  ROGUE_RECOVERY_NOTES.md  SHADOWHOOK_NOTES.md
gradle/: libs.versions.toml
modules/once/: build.gradle.kts  proguard-rules.pro
modules/once/src/main/java/com/devin/lsposed/once/: FeatureRegistry.java  FeatureState.java  ModuleEntry.java  (+1 more)
modules/once/src/main/res/values/: arrays.xml  strings.xml
modules/rogue/: build.gradle.kts  proguard-rules.pro
modules/rogue/src/main/res/values/: strings.xml
scripts/frida/: README.md  android_recon.js  find_java_classes.js  list_exports.js  list_modules.js  set_recovered_features_once.js  trace_native_minimal.js  trace_old_module_hooks.js
tools/: README.md  configure-template.py  deep.py  find_str_xref.py  fstart.py  memtool.c  rela.py  vtbl.py
(+18 files in other folders)
